# franka-panda

./: README.md
alexa_pnp/: CMakeLists.txt  README.md  package.xml
alexa_pnp/src/: alexa_skill_ros.py
panda_pick_and_place/: CMakeLists.txt  package.xml
panda_pick_and_place/launch/: pick_place.launch  pick_place_sim.launch  pick_place_test.launch
panda_pick_and_place/src/: gripper_test.cpp  pnp.cpp  pnp_long.cpp  pnp_short.cpp  pnp_sim.cpp  pnp_test.cpp
panda_pnp_srvcli/: CMakeLists.txt  README.md  package.xml
panda_pnp_srvcli/json/: poses.json
panda_pnp_srvcli/launch/: pick_place.launch
panda_pnp_srvcli/src/: pnp_client.cpp  pnp_client_s2t.cpp  pnp_server.cpp  pnp_sim.cpp
panda_pnp_srvcli/srv/: PnpRequest.srv
